add tables to simulation

--- a/simulation/index.html
+++ b/simulation/index.html
@@ -26,7 +26,56 @@
                 </div>
             </div>
             <h2>State</h2>
-            <pre id="state"></pre>
+            <h3>Outputs</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Value</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Charge A</td>
+                        <td id="chargeA"></td>
+                    </tr>
+                    <tr>
+                        <td>Charge B</td>
+                        <td id="chargeB"></td>
+                    </tr>
+                    <tr>
+                        <td>Dynamo Off</td>
+                        <td id="dynamoOff"></td>
+                    </tr>
+                    <tr>
+                        <td>DischargeA</td>
+                        <td id="dischargeA"></td>
+                    </tr>
+                    <tr>
+                        <td>DischargeB</td>
+                        <td id="dischargeB"></td>
+                    </tr>
+                </tbody>
+            </table>
+            <h3>Program</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Value</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Driving State</td>
+                        <td id="drivingState"></td>
+                    </tr>
+                    <tr>
+                        <td>Max Discharge Value</td>
+                        <td id="maxDischargeValue"></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
