dynamo sine wave simulation

--- a/simulation/index.html
+++ b/simulation/index.html
@@ -24,6 +24,10 @@
                 <div>
                     <input type="range" id="resistance" min="2" max="100" value="10" step="1">
                 </div>
+                <label for="speed">Speed</label>
+                <div>
+                    <input type="range" id="speed" min="0" max="45" value="25" step="1">
+                </div>
             </div>
             <h2>State</h2>
             <h3>Outputs</h3>
@@ -73,6 +77,10 @@
                     <tr>
                         <td>Max Discharge Value</td>
                         <td id="maxDischargeValue"></td>
+                    </tr>
+                    <tr>
+                        <td>Dynamo Frequency</td>
+                        <td id="dynamoFrequency"></td>
                     </tr>
                 </tbody>
             </table>
