--- a/simulation/index.html
+++ b/simulation/index.html
@@ -28,6 +28,10 @@
                 <div>
                     <input type="range" id="speed" min="0" max="45" value="25" step="1">
                 </div>
+                <label for="speed">OCR1A</label>
+                <div>
+                    <input type="range" id="rangeocr1a" min="0" max="511" value="256" step="1">
+                </div>
             </div>
             <h2>State</h2>
             <h3>Outputs</h3>
@@ -81,6 +85,42 @@
                     <tr>
                         <td>Dynamo Frequency</td>
                         <td id="dynamoFrequency"></td>
+                    </tr>
+                    <tr>
+                        <td>Charge Measurement Count</td>
+                        <td id="chargeMeasurementCount"></td>
+                    </tr>
+                    <tr>
+                        <td>Charge Current Sum</td>
+                        <td id="chargeCurrentSum"></td>
+                    </tr>
+                    <tr>
+                        <td>Charge Voltage Sum</td>
+                        <td id="chargeVoltageSum"></td>
+                    </tr>
+                    <tr>
+                        <td>OCR1A</td>
+                        <td id="ocr1a"></td>
+                    </tr>
+                    <tr>
+                        <td>TCNT1</td>
+                        <td id="tcnt1"></td>
+                    </tr>
+                    <tr>
+                        <td>Power</td>
+                        <td id="power"></td>
+                    </tr>
+                    <tr>
+                        <td>MPPT direction</td>
+                        <td id="mpptDirection"></td>
+                    </tr>
+                    <tr>
+                        <td>MPPT step timing</td>
+                        <td id="mpptStepTiming"></td>
+                    </tr>
+                    <tr>
+                        <td>MPPT step size</td>
+                        <td id="mpptStepSize"></td>
                     </tr>
                 </tbody>
             </table>
