--- a/simulation/index.html
+++ b/simulation/index.html
@@ -115,8 +115,8 @@
                         <td id="mpptDirection"></td>
                     </tr>
                     <tr>
-                        <td>MPPT step timing</td>
-                        <td id="mpptStepTiming"></td>
+                        <td>isBraking</td>
+                        <td id="isBraking"></td>
                     </tr>
                     <tr>
                         <td>MPPT step size</td>
